# cert

./: .replit  app.py  database.db  pyproject.toml  replit.md  requirements.txt  windows_store_publishing.txt
attached_assets/: Pasted-You-are-a-senior-Python-Flask-engineer-Build-a-complete_1770211834166.txt
static/: manifest.json  style.css  sw.js
templates/: bulk.html  editor.html  index.html  preview.html  verify.html
templates/admin/: templates.html
