[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.0.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.9",
]
